  - so it is included in config/build info submitted in new GitHub Issues.
- Debug Tools:
   - Fixed DebugTextEncoding() potentially reading out of bounds when
     provided a trailing truncated UTF-8 sequence.
   - Metrics: fixed table and columns rect highlight from display when
     debug/metrics window is not in the same viewport as the table.
- Backends:
  - GLFW: fixed building on Linux platforms where Wayland headers
    are not available. (#9024, #8969, #8921, #8920) [@jagot]
  - GLFW: lower minimum requirement from GLFW 3.1 to GLFW 3.0. Though
    a recent version e.g GLFW 3.4 is highly recommended! (#9055) [@Clownacy]
  - GLFW: fixed last `ImGui_ImplGlfw_Shutdown()` not immediately clearing the context
    map, which would be detected by leak trackers. (#9075, #8676, #8239, #8069) [@erincatto]
  - SDL3: fixed Platform_OpenInShellFn() return value (the return value
    was unused in core but might be used by a direct caller). (#9027) [@achabense]
  - SDL3: fixed an issue with missing characters events when an already active text
    field changes viewports. (#9054)
  - Vulkan: added IMGUI_IMPL_VULKAN_VOLK_FILENAME to configure path to
    Volk (default to "volk.h"). (#9008, #7722, #6582, #4854) [@mwlasiuk]
  - WebGPU: added various internal/optional helpers to wrap some of the
    Dawn/WGPU/Emscripten debacle quirks: (#8381) [@brutpitt]
     - ImGui_ImplWGPU_CreateWGPUSurfaceHelper().
     - ImGui_ImplWGPU_IsSurfaceStatusError(), ImGui_ImplWGPU_IsSurfaceStatusSubOptimal().
     - ImGui_ImplWGPU_DebugPrintAdapterInfo(),
     - ImGui_ImplWGPU_GetBackendTypeName(), ImGui_ImplWGPU_GetAdapterTypeName(),
       ImGui_ImplWGPU_GetDeviceLostReasonName(), ImGui_ImplWGPU_GetErrorTypeName(),
       ImGui_ImplWGPU_GetLogLevelName().
  - WebGPU: update to compile with Dawn and Emscripten's 4.0.10+
    '--use-port=emdawnwebgpu' ports. (#8381, #8898, #7435) [@brutpitt, @trbabb]
    When using Emscripten 4.0.10+, backend now defaults to IMGUI_IMPL_WEBGPU_BACKEND_DAWN