@@ -1,9 +1,12 @@
-See BACKENDS and EXAMPLES files in the docs/ folder, or on the web at: https://github.com/ocornut/imgui/tree/master/docs
+New to Dear ImGui?
+- Check out the Getting Started guide: https://github.com/ocornut/imgui/wiki/Getting-Started
+- About Backends: docs/BACKENDS.md file, or on the web: https://github.com/ocornut/imgui/blob/master/docs/BACKENDS.md
+- About Examples: docs/EXAMPLES.md file, or on the web: https://github.com/ocornut/imgui/blob/master/docs/EXAMPLES.md
 
 Backends = Helper code to facilitate integration with platforms/graphics api (used by Examples + should be used by your app).
 Examples = Standalone applications showcasing integration with platforms/graphics api.
 
-Some Examples have extra README files in their respective directory, please check them too!
+A few Examples have extra README files in their respective directory, please check them too!
 
 Once Dear ImGui is running (in either examples or your own application/game/engine),
 run and refer to ImGui::ShowDemoWindow() in imgui_demo.cpp for the end-user API.
